# rs-spodgi

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust_build
src/: lib.rs  main.rs
test/: 00_select_node_sequence.rq  01_select_all_node_sequences.rq  02_select_all_steps_with_start_end_pos.rq  t.gfa  t_small.gfa
