[package]
name = "rs-spodgi"
version = "0.1.0"
authors = ["AndreaGuarracino <andreaguarracino@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdf = { git = "https://github.com/AndreaGuarracino/rs-rdf" }
clap = "2"